--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Forside</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="stil/stilark.css" />
+    <link rel="stylesheet" media="print" href="stil/print.css" />
+
     <script src="main.js"></script>
 </head>
 <body>
